2005-11-05 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/sim.src/error.cc: fixed uninitialized class member variable
	  bug, which caused Bus Errors on sparc solaris

2005-11-04 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/error.cc, sim/ucsim/errorcl.h,
	  sim/ucsim/sim.src/stack.cc, sim/ucsim/sim.src/stackcl.h,
	  sim/ucsim/sim.src/uc.cc, sim/ucsim/sim.src/uccl.h,
	  sim/ucsim/sim.src/mem.cc, sim/ucsim/sim.src/memcl.h,
	  sim/ucsim/cmd.src/cmdconf.cc: dynamic construction of cl_error_class
	  and derivates to resolve the initialization problem on OSX

2005-11-02 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdutil.cc, sim/ucsim/cmd.src/newcmd.cc:
	  corrected typo - #include <winsock2.h>

2005-11-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/asm.c (printILine): always close tmpFile, thanks Beau E. Cox,
	  (_asxxxx_mapping): added org directive for future enhancements

2005-11-01 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/app.cc, sim/ucsim/cmd.src/cmdutil.cc, sim/ucsim/cmd.src/newcmd.cc:
	  enabled sockets on WIN32
	* sim/ucsim/cmd.src/newcmd.cc: fixed bug with uninitialized variables

2005-10-31 Borut Razem <borut.razem AT siol.net>

	* support/regression/generate-cases.py: escape backslashes in {testcase}:
	  WIN32 backslash path delimiters should be escaped when used in C strings
	* support/regression/tests/bitfields.c: exclude failing assertions for
	  __CYGWIN32__ and __MINGW32__ hosts

2005-10-30 Borut Razem <borut.razem AT siol.net>

	* src/SDCCutil.c: corrected double comparison typo

2005-10-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/medium/Makefile: added for new memory model medium
	* device/include/asm/mcs51/features.h: updated for medium/pdata
	* device/include/mcs51/c8051f120.h: added sfr16/sfr32 definitions,
	  added Multiply & Accumulate sbit's and MAC0_PAGE define
	* device/include/mcs51/c8051f300.h: added sfr16 definitions
	* device/include/mcs51/c8051f310.h: added sfr16 definitions