@@ -422,8 +422,6 @@ public:
 
 class cl_error_mem: public cl_error
 {
-private:
-  static class cl_error_class *error_mem_class;
 protected:
   class cl_memory *mem;
   t_addr addr;
@@ -433,8 +431,6 @@ public:
 
 class cl_error_mem_invalid_address: public cl_error_mem
 {
-private:
-  static class cl_error_class *error_mem_invalid_address_class;
 public:
   cl_error_mem_invalid_address(class cl_memory *amem, t_addr aaddr);
 
@@ -443,15 +439,19 @@ public:
 
 class cl_error_mem_non_decoded: public cl_error_mem
 {
-private:
-  static class cl_error_class *error_mem_non_decoded_class;
 public:
   cl_error_mem_non_decoded(class cl_memory *amem, t_addr aaddr);
 
   virtual void print(class cl_commander *c);
 };
 
+class cl_mem_error_registry: public cl_error_registry
+{
+public:
+  cl_mem_error_registry(void);
+};
 
 #endif
+
 
 /* End of memcl.h */
